feat: club section desgin.

--- a/index.html
+++ b/index.html
@@ -96,11 +96,50 @@
                     </ul>
                 </div>
             </section>
-
             <section class="clubs" id="clubs">
-                <!-- [TODO - List of Clubs with details and Join in User action Button] -->
                 <div class="clubs-container">
-                    <h1>Clubs</h1>
+                    <h1 class="section-title">Our Sports Clubs</h1>
+                    <div class="clubs-grid">
+                        <div class="club-card">
+                            <video src="/assets/football.mp4" muted loop playsinline></video>
+                            <div class="club-info">
+                                <h3>Football Club</h3>
+                                <p>Join the APU Football Club to compete, train, and grow your skills with passionate teammates.</p>
+                            </div>
+                        </div>
+
+                        <div class="club-card">
+                            <video src="/assets/hero-background.mp4" muted loop playsinline></video>
+                            <div class="club-info">
+                                <h3>Basketball Club</h3>
+                                <p>Shoot your shot! Compete in inter-university games and train with expert coaches.</p>
+                            </div>
+                        </div>
+
+                        <div class="club-card">
+                            <video src="/assets/badminton.mp4" muted loop playsinline></video>
+                            <div class="club-info">
+                                <h3>Badminton Club</h3>
+                                <p>Smash through tournaments and build your reflexes with friendly and competitive players.</p>
+                            </div>
+                        </div>
+
+                        <div class="club-card">
+                            <video src="/assets/tt.mp4" muted loop playsinline></video>
+                            <div class="club-info">
+                                <h3>Table Tennis Club</h3>
+                                <p>Quick reflexes and fast matches await! Play casually or competitively in our TT sessions.</p>
+                            </div>
+                        </div>
+
+                        <div class="club-card">
+                            <video src="/assets/volleyball.mp4" muted loop playsinline></video>
+                            <div class="club-info">
+                                <h3>Volleyball Club</h3>
+                                <p>Spike your way to victory! Perfect for team lovers and outdoor sports fans.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
