feat: Gallery and Testimonial Section Design and Message From Dean

--- a/index.html
+++ b/index.html
@@ -89,13 +89,33 @@
                 </div>
             </section>
             <section class="metrics" id="metrics">
-                <!-- [TODO - Show the Total Groups, Events, Sports Clubs, Awards] -->
                 <div class="metrics-container">
+                    <h2 class="section-title">Our Achievements</h2>
                     <ul class="metrics-items">
-                        <li class="metrics-item">200+ Events</li>
+                        <li class="metrics-item">
+                            <h3>200+</h3>
+                            <p>Events Organized</p>
+                        </li>
+                        <li class="metrics-item">
+                            <h3>15</h3>
+                            <p>Sports Clubs</p>
+                        </li>
+                        <li class="metrics-item">
+                            <h3>500+</h3>
+                            <p>Total Members</p>
+                        </li>
+                        <li class="metrics-item">
+                            <h3>25</h3>
+                            <p>Championships Won</p>
+                        </li>
+                        <li class="metrics-item">
+                            <h3>10</h3>
+                            <p>Annual Tournaments</p>
+                        </li>
                     </ul>
                 </div>
             </section>
+
             <section class="clubs" id="clubs">
                 <div class="clubs-container">
                     <h1 class="section-title">Our Sports Clubs</h1>
@@ -144,25 +164,90 @@
             </section>
 
             <section class="gallery" id="gallery">
-                <!-- [TODO - Add Image Gallery of Sports Events, Matches, and Activities] -->
                 <div class="gallery-container">
-                    <h1>Gallery</h1>
+                    <h1 class="gallery-title">Gallery</h1>
+                    <div class="gallery-grid">
+                        <div class="gallery-item tall">
+                            <img src="/assets/gallery1.jpg" alt="Sports Event 1">
+                        </div>
+                        <div class="gallery-item wide">
+                            <img src="/assets/gallery2.jpg" alt="Match Celebration">
+                        </div>
+                        <div class="gallery-item">
+                            <img src="/assets/gallery3.jpg" alt="Trophy Ceremony">
+                        </div>
+                        <div class="gallery-item">
+                            <img src="/assets/gallery4.jpg" alt="Football Match">
+                        </div>
+                        <div class="gallery-item tall">
+                            <img src="/assets/gallery5.jpg" alt="Basketball Action">
+                        </div>
+                        <div class="gallery-item wide">
+                            <img src="/assets/gallery6.jpg" alt="Running Event">
+                        </div>
+                    </div>
                 </div>
             </section>
 
             <section class="testimonials" id="testimonials">
-                <!-- [TODO - Add Student/Coach Testimonials with Name, Role, and Quote] -->
                 <div class="testimonials-container">
-                    <h1>Testimonials</h1>
+                    <h1 class="testimonials-title">Testimonials</h1>
+                    <div class="testimonials-slider-wrapper">
+                        <div class="testimonials-slider">
+                            <div class="testimonial">
+                                <p>"Being part of this club helped me grow as a person and an athlete."</p>
+                                <span>- Ramesh Shrestha, Student Captain</span>
+                            </div>
+                            <div class="testimonial">
+                                <p>"The community and discipline taught here stays with you forever."</p>
+                                <span>- Anjali Lama, Alumni Player</span>
+                            </div>
+                            <div class="testimonial">
+                                <p>"Watching students grow into champions is the best reward."</p>
+                                <span>- Sagar Thapa, Coach</span>
+                            </div>
+                            <div class="testimonial">
+                                <p>"We were trained like champions, and we won like one too!"</p>
+                                <span>- Binita Khadka, National Winner</span>
+                            </div>
+                            <div class="testimonial">
+                                <p>"This club is the pride of our institution."</p>
+                                <span>- Prof. Rajendra Joshi, Faculty Mentor</span>
+                            </div>
+
+                            <div class="testimonial">
+                                <p>"Being part of this club helped me grow as a person and an athlete."</p>
+                                <span>- Ramesh Shrestha, Student Captain</span>
+                            </div>
+                            <div class="testimonial">
+                                <p>"The community and discipline taught here stays with you forever."</p>
+                                <span>- Anjali Lama, Alumni Player</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
             <section class="message-from-dean" id="dean-message">
-                <!-- [TODO - Add Inspirational Message from the Dean or University Principal] -->
                 <div class="dean-message-container">
-                    <h1>Message from the Dean</h1>
-                    <p>[Insert message from the dean here, encouraging student participation in sports and promoting balance
-                    between academics and physical activity]</p>
+                    <div class="dean-text">
+                        <h1>Message from the Dean</h1>
+                        <p>
+                        At our institution, we believe in the holistic development of every student.
+                        Sports and physical activities teach discipline, teamwork, and perseverance—qualities
+                        essential for both academic and life success. I encourage all students to actively participate,
+                        build friendships, and grow as future leaders through sports.
+                        </p>
+                    </div>
+                    <div class="dean-photo-wrapper">
+                        <div class="dean-photo-card">
+                            <img src="/assets/dean.jpg" alt="Dean's Photo" class="dean-photo" />
+                            <div class="dean-info">
+                                <span>Dr. Sunita Bhattarai</span>
+                                <small>Dean, School of Sports & Wellness</small>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
