feat: CTA, GET Involved and Footer.

--- a/index.html
+++ b/index.html
@@ -252,23 +252,42 @@
             </section>
 
             <section class="motivation" id="motivation">
-                <!-- [TODO - Add Motivational Content to Encourage Students to Join Clubs] -->
                 <div class="motivation-container">
                     <h1>Why You Should Join a Club</h1>
-                    <ul>
-                        <li>Build lifelong friendships and team spirit</li>
-                        <li>Stay fit, active, and healthy</li>
-                        <li>Develop leadership and communication skills</li>
-                        <li>Represent your university in competitions</li>
-                        <li>Make your university experience memorable and fulfilling</li>
+                    <ul class="motivation-list">
+                        <li>
+                            <span class="icon">➤</span>
+                            <p>Build lifelong friendships and team spirit</p>
+                        </li>
+                        <li>
+                            <span class="icon">➤</span>
+                            <p>Stay fit, active, and healthy</p>
+                        </li>
+                        <li>
+                            <span class="icon">➤</span>
+                            <p>Develop leadership and communication skills</p>
+                        </li>
+                        <li>
+                            <span class="icon">➤</span>
+                            <p>Represent your university in competitions</p>
+                        </li>
+                        <li>
+                            <span class="icon">➤</span>
+                            <p>Make your university experience memorable and fulfilling</p>
+                        </li>
                     </ul>
                 </div>
             </section>
 
             <section class="cta" id="cta">
-                <!-- [TODO - Add Call To Action: Register, Join Club, Attend Event, etc.] -->
                 <div class="cta-container">
                     <h1>Get Involved!</h1>
+                    <p>Don’t miss out on the excitement – take your university life to the next level.</p>
+                    <div class="cta-buttons">
+                        <a href="#register" class="btn primary">Register Now</a>
+                        <a href="#clubs" class="btn outline">Join a Club</a>
+                        <a href="#events" class="btn outline">Attend an Event</a>
+                    </div>
                 </div>
             </section>
 
@@ -277,7 +296,11 @@
         <footer class="footer">
             <div class="footer-container">
                 <ul class="footer-lists">
-                    <li class="footer-list">Home</li>
+                    <li class="footer-list"><a href="#home">Home</a></li>
+                    <li class="footer-list"><a href="#about">About</a></li>
+                    <li class="footer-list"><a href="#gallery">Gallery</a></li>
+                    <li class="footer-list"><a href="#testimonials">Testimonials</a></li>
+                    <li class="footer-list"><a href="#contact">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-delivery-content">
