--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="/js/script.js" defer></script>
         <title>APU Sports Organization</title>
     </head>
-    <body>
+    <body class="font-bebas m-0 p-0">
         <!-- Main Section -->
         <main class="main" id="main">
             <section class="hero">
@@ -19,7 +19,7 @@
                 <header class="header" id="main-header">
                     <nav class="navbar" id="navbar">
                         <div class="logo-container">
-                            <img src="#" alt="APU Logo" class="logo" />
+                            <img src="assets/apu-logo.png" alt="APU Logo" class="logo" />
                         </div>
 
                         <button class="hamburger" id="hamburger-btn" aria-label="Toggle navigation">
@@ -42,20 +42,15 @@
                 <!-- Background overlay -->
                 <div class="overlay">
                     <div class="hero-content">
-                        <p class="subtitle">UNIVERSITY SPORTS CLUB</p>
-                        <h1>APU UNIVERSITY COLLEGE<br>SPORTS ORGANIZATION</h1>
+                        
+                        <h1>Asian Pacific University<br>SPORTS ORGANIZATION</h1>
                         <p class="description">
                         APU Sports Organization is dedicated to promoting a vibrant sports culture among students. Join our diverse sports programs and unleash your athletic potential.
                         </p>
-                        <button class="button-outline" >EXPLORE EVENTS</button>
                     </div>
-                </div>
+                        <button class="button-outline bottom-3" >EXPLORE EVENTS</button>
 
-                <!-- Athletes -->
-                <img src="assets/top-left.png" class="athlete cricketer-left" alt="Cricketer Left" />
-                <img src="assets/top-right.png" class="athlete cricketer-right" alt="Cricketer Right" />
-                <img src="assets/bottom-left.png" class="athlete footballer-left" alt="Footballer Left" />
-                <img src="assets/bottom-right.png" class="athlete footballer-right" alt="Footballer Right" />
+                </div>
             </section>
 
             <section class="event-timer" id="event-timer">
@@ -120,7 +115,8 @@
             <section class="clubs" id="clubs">
                 <div class="clubs-container">
                     <h1 class="section-title">Our Sports Clubs</h1>
-                    <div class="clubs-grid">
+                    <div class="clubs-slider-wrapper">
+                        <div class="clubs-grid">
                         <div class="club-card">
                             <video src="/assets/football.mp4" muted loop playsinline></video>
                             <div class="club-info">
@@ -160,6 +156,35 @@
                                 <p>Spike your way to victory! Perfect for team lovers and outdoor sports fans.</p>
                             </div>
                         </div>
+                        <div class="club-card">
+                            <video src="/assets/volleyball.mp4" muted loop playsinline></video>
+                            <div class="club-info">
+                                <h3>Volleyball Club</h3>
+                                <p>Spike your way to victory! Perfect for team lovers and outdoor sports fans.</p>
+                            </div>
+                        </div>
+                        <div class="club-card">
+                            <video src="/assets/volleyball.mp4" muted loop playsinline></video>
+                            <div class="club-info">
+                                <h3>Volleyball Club</h3>
+                                <p>Spike your way to victory! Perfect for team lovers and outdoor sports fans.</p>
+                            </div>
+                        </div>
+                        <div class="club-card">
+                            <video src="/assets/volleyball.mp4" muted loop playsinline></video>
+                            <div class="club-info">
+                                <h3>Volleyball Club</h3>
+                                <p>Spike your way to victory! Perfect for team lovers and outdoor sports fans.</p>
+                            </div>
+                        </div>
+                        <div class="club-card">
+                            <video src="/assets/volleyball.mp4" muted loop playsinline></video>
+                            <div class="club-info">
+                                <h3>Volleyball Club</h3>
+                                <p>Spike your way to victory! Perfect for team lovers and outdoor sports fans.</p>
+                            </div>
+                        </div>
+                    </div>
                     </div>
                 </div>
             </section>
@@ -169,22 +194,22 @@
                     <h1 class="gallery-title">Gallery</h1>
                     <div class="gallery-grid">
                         <div class="gallery-item tall">
-                            <img src="/assets/gallery1.jpg" alt="Sports Event 1">
+                            <img src="/assets/WhatsApp Image 2025-07-20 at 18.20.15.jpeg" alt="Sports Event 1">
                         </div>
                         <div class="gallery-item wide">
-                            <img src="/assets/gallery2.jpg" alt="Match Celebration">
+                            <img src="/assets/img.jpeg" alt="Match Celebration">
                         </div>
                         <div class="gallery-item">
-                            <img src="/assets/gallery3.jpg" alt="Trophy Ceremony">
+                            <img src="/assets/pubg.jpeg" alt="Trophy Ceremony">
                         </div>
                         <div class="gallery-item">
-                            <img src="/assets/gallery4.jpg" alt="Football Match">
+                            <img src="/assets/pubg2.jpeg" alt="Football Match">
                         </div>
                         <div class="gallery-item tall">
-                            <img src="/assets/gallery5.jpg" alt="Basketball Action">
+                            <img src="/assets/mara.jpeg" alt="Basketball Action">
                         </div>
                         <div class="gallery-item wide">
-                            <img src="/assets/gallery6.jpg" alt="Running Event">
+                            <img src="/assets/" alt="Running Event">
                         </div>
                     </div>
                 </div>
@@ -232,7 +257,7 @@
             <section class="message-from-dean" id="dean-message">
                 <div class="dean-message-container">
                     <div class="dean-text">
-                        <h1>Message from the Dean</h1>
+                        <h1>Message from  CEO</h1>
                         <p>
                         At our institution, we believe in the holistic development of every student.
                         Sports and physical activities teach discipline, teamwork, and perseverance—qualities
@@ -242,10 +267,10 @@
                     </div>
                     <div class="dean-photo-wrapper">
                         <div class="dean-photo-card">
-                            <img src="/assets/dean.jpg" alt="Dean's Photo" class="dean-photo" />
+                            <img src="/assets/ceo.png" alt="Dean's Photo" class="dean-photo" />
                             <div class="dean-info">
-                                <span>Dr. Sunita Bhattarai</span>
-                                <small>Dean, School of Sports & Wellness</small>
+                                <span>Laxman Pokhrel</span>
+                                <small>CEO and Principle</small>
                             </div>
                         </div>
                     </div>
@@ -285,9 +310,9 @@
                     <h1>Get Involved!</h1>
                     <p>Don’t miss out on the excitement – take your university life to the next level.</p>
                     <div class="cta-buttons">
-                        <a href="#register" class="btn primary">Register Now</a>
-                        <a href="#clubs" class="btn outline">Join a Club</a>
-                        <a href="#events" class="btn outline">Attend an Event</a>
+                        <a href="#register" class="button-outline btn-link">Register Now</a>
+                        <a href="#clubs" class="button-outline btn-link">Join a Club</a>
+                        <a href="#events" class="button-outline btn-link">Attend an Event</a>
                     </div>
                 </div>
             </section>
