--- a/form.html
+++ b/form.html
@@ -1,30 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join us</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>University Sports Club Registration</title>
+  <link rel="stylesheet" href="css/form.style.css" />
 </head>
 <body>
-    <form action="https://formsubmit.co/mail.nishanrana@gmail.com" method="POST">
-     <input type="text" name="name" placeholder="Enter your Full Name" required>
-     <input type="date" name="date" placeholder="DD/MM/YYYY">
-     <LABel >Gender</LABel>
-     <input type="radio" name="gender" value="Male">Male
-     <input type="radio" name="gender" value="Female">Female
-     <input type="email" name="email" placeholder="Enter your Email Address" required>
-     <label for="phone" pattern="0" >Phone Number</label>
-     <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+    <div class="video-wrapper">
+    <video id="bg-video" autoplay muted loop playsinline poster="/assets/hero-thumbnail.jpg">
+      <source src="/assets/hero-background.mp4" type="video/mp4" />
+      Your browser does not support HTML5 video.
+    </video>
+    <div class="overlay"></div>
+  </div>
 
-     <H1>Emergency Contact</H1>
-     <label>Emergency Contact Name:</label>
-     <input type="text" name="E-name">
-     <br>
-     <label>Relationship to Participant:</label>
-     <input type="text" name="Relation">
-     <label>Emergency Contact Number:</label>
-     <input type="text" name="E-number" id="">
-     <button type="submit">Send</button>
-</form>
-</body>
+  <div class="form-container">
+      <a href="index.html" class="back-button">← Back to Home</a>
+    <form class="registration-form" onsubmit="event.preventDefault(); alert('The form has been submitted!')">
+      <h2>Join University Sports Club</h2>
+
+      <label for="name">Full Name *</label>
+      <input type="text" id="name" required />
+
+      <label for="email">University Email *</label>
+      <input type="email" id="email" required />
+
+      <label for="student-id">Student ID *</label>
+      <input type="text" id="student-id" required />
+
+      <label for="club">Select Club *</label>
+      <select id="club" required>
+        <option value="" disabled selected>Select a sport</option>
+        <option value="football">Football</option>
+        <option value="basketball">Basketball</option>
+        <option value="cricket">Cricket</option>
+        <option value="badminton">Badminton</option>
+        <option value="volleyball">Volleyball</option>
+      </select>
+
+      <label for="year">Academic Year *</label>
+      <select id="year" required>
+        <option value="" disabled selected>Select year</option>
+        <option value="1st">1st Year</option>
+        <option value="2nd">2nd Year</option>
+        <option value="3rd">3rd Year</option>
+        <option value="4th">4th Year</option>
+      </select>
+
+      <label for="message">Why do you want to join?</label>
+      <textarea id="message" rows="3" placeholder="Optional"></textarea>
+
+      <button type="submit" class="button-primary">Join Now</button>
+      <p class="note">* Required fields</p>
+    </form>
+  </div>
+
+  <script>
+    const video = document.getElementById("bg-video");
+
+    video.addEventListener("canplaythrough", () => {
+      video.style.opacity = "1"; 
+    });
+  </script>
+   </body>
 </html>
+
