feat:hero bg changed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <main class="main" id="main">
             <section class="hero">
                 <video autoplay muted loop playsinline poster="assets/hero-thumbnail.png" id="background-video" class="background-video">
-                    <source src="assets/hero-background.mp4" type="video/mp4" />
+                    <source src="assets/homepage.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                 </video>
                 <header class="header" id="main-header">
@@ -118,17 +118,17 @@
                     <div class="clubs-slider-wrapper">
                         <div class="clubs-grid">
                         <div class="club-card">
-                            <video src="/assets/football.mp4" muted loop playsinline></video>
+                            <img src="/assets/futsal.jpeg" alt="futsal">
                             <div class="club-info">
-                                <h3>Football Club</h3>
-                                <p>Join the APU Football Club to compete, train, and grow your skills with passionate teammates.</p>
+                                <h3>Futsal</h3>
                             </div>
                         </div>
 
                         <div class="club-card">
-                            <video src="/assets/hero-background.mp4" muted loop playsinline></video>
+                            <img src="/assets/" alt="Basketball">
+                            
                             <div class="club-info">
-                                <h3>Basketball Club</h3>
+                                <h3>Basketball </h3>
                                 <p>Shoot your shot! Compete in inter-university games and train with expert coaches.</p>
                             </div>
                         </div>
