--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <main class="main" id="main">
             <section class="hero">
                 <video autoplay muted loop playsinline poster="assets/hero-thumbnail.png" id="background-video" class="background-video">
-                    <source src="assets/homepage.mp4" type="video/mp4" />
+                    <source src="assets/homenew.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                 </video>
                 <header class="header" id="main-header">
