feat:add nav bar button

--- a/sports.html
+++ b/sports.html
@@ -30,7 +30,7 @@
     <nav class="nav-links">
       <a href="/index.html">Home</a>
       <a href="#sports">Sports</a>
-      <a href="#join" class="btn-nav">Join Club</a>
+      <a href="/form.html" class="btn-nav">Join Club</a>
     </nav>
     <div class="menu-toggle">☰</div>
   </header>
