feat(ui): update button styles and improve layout responsiveness

--- a/basketball.html
+++ b/basketball.html
@@ -21,11 +21,11 @@
   <!-- Navbar -->
   <header>
     <div class="logo-container">
-    <h1>🏀 APU Club</h1></a>
+    <h1>🏀 APU Basketball Club</h1></a>
     </div>
     <nav class="nav-links">
       <a href="/index.html">Home</a>
-      <a href="/form.html" class="btn-nav">JOIN US</a>
+      <a href="/form.html" class="btn-nav">Join Club</a>
     </nav>
     <div class="menu-toggle">☰</div>
   </header>
