--- a/tugofwar.html
+++ b/tugofwar.html
@@ -18,7 +18,9 @@
       <a class="text-decoration-none" href="/index.html"><h1>💪 APU Tug of War Club</h1></a>
     </div>
     <nav class="nav-links">
-      <a href="/form.html" class="btn-nav">JOIN US</a>
+      <a href="/index.html" class ="btn-nav">Home</a>
+
+      <a href="/form.html" class="btn-nav">Join Club</a>
     </nav>
     <div class="menu-toggle">☰</div>
   </header>
