--- a/futsal.html
+++ b/futsal.html
@@ -17,7 +17,7 @@
     </div>
     <nav class="nav-links">
       <a href="/index.html">Home</a>
-      <a href="/form.html" class="btn-nav">JOIN US</a>
+      <a href="/form.html" class="btn-nav">Join Club</a>
     </nav>
     <div class="menu-toggle">☰</div>
   </header>
