--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
                             <li class="nav-item"><a href="/events.html" class="nav-link">Events</a></li>
                             <li class="nav-item"><a href="/sports.html" class="nav-link"> Sports Clubs</a></li>
-                            <li class="nav-item"><a href="/about.html" class="nav-link">About</a></li>
+                            <li class="nav-item"><a href="/about.html" class="nav-link">About Us</a></li>
                         </ul>
                         <div class="user-action-btn">
                             <button class="button-primary " onclick="window.location.href='/form.html'"> Join Us </button>
